# ckanext-sentry

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/sentry/: plugin.py
ckanext/sentry/tests/: test_plugin.py
