[project]
name = "ckanext-sentry"
version = "0.0.1"
description = "Add Sentry-Logging-Middleware to CKAN"
readme = "README.md"
authors = [
    {name = "Stefanie Taepke", email = "steffi@liip.ch"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "sentry", "logging", "middleware", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/stefina/ckanext-sentry"

[project.entry-points."ckan.plugins"]
sentry = "ckanext.sentry.plugin:SentryPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
